cluster/core/velero/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: velero
  annotations:
    keel.sh/policy: minor
    keel.sh/approvals: "1"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: '@every 12h'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      nodeSelector:
        backup_storage: "true"
      volumes:
        - name: config-vol
          hostPath:
            path: /mnt/backup/minio/config
            type: DirectoryOrCreate
        - name: data-vol
          hostPath:
            path: /mnt/backup/minio/data
            type: DirectoryOrCreate
      containers:
      - name: minio
        image: minio/minio
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        args: ['server', '/data', '--console-address', ':9001']
        volumeMounts:
          - mountPath: /root/.minio
            name: config-vol
          - mountPath: /data
            name: data-vol
