cluster/core/velero/minio/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: minio
  namespace: velero
spec:
  type: NodePort
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
      name: service-port
    - port: 9001
      targetPort: 9001
      name: ui-port
